--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'com.google.android.gms:play-services-maps:17.0.1'
     implementation 'com.karumi:dexter:6.2.3'
+    implementation 'com.google.android.libraries.places:places:2.5.0'
 }
