--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,5 @@ dependencies {
     implementation 'com.karumi:dexter:6.2.3'
     implementation 'com.google.android.libraries.places:places:2.5.0'
     implementation 'com.google.maps.android:android-maps-utils:0.4+'
+    implementation 'com.google.android.material:material:1.2.0-alpha02'
 }
