Corrección de error al pedir el permiso de localización al usuario.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,6 +49,11 @@
             android:name="org.apache.http.legacy"
             android:required="false" />
 
+        <service
+            android:name="MapActivity"
+            android:foregroundServiceType="location" >
+        </service>
+
     </application>
 
 </manifest>
